--- a/candy.html
+++ b/candy.html
@@ -30,8 +30,25 @@
     
             </ul>
         </div>
-
     </nav>
+
+    <section class="container-fluid px-0"></section>
+    <div class="row align-items-center">
+        <div class="col-lg-6">
+            <div id="headingGroup" class="text-white text-center d-none d-lg-block">
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <img class="img-fluid" src="roseloli.jpg">
+        </div>
+    </div>
 
 
 
