Send Group Finished

--- a/candy.html
+++ b/candy.html
@@ -31,24 +31,48 @@
             </ul>
         </div>
     </nav>
-
+<!--First Row-->
     <section class="container-fluid px-0"></section>
     <div class="row align-items-center">
         <div class="col-lg-6">
             <div id="headingGroup" class="text-white text-center d-none d-lg-block">
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
-                <h2 class="display-2">MUSEUM <span>/</span>OF<span>/</span> CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
+                <h2 class="display-2">MUSEUM<span>/</span>OF<span>/</span>CANDY</h2>
             </div>
         </div>
         <div class="col-lg-6">
-            <img class="img-fluid" src="roseloli.jpg">
+            <img class="img-fluid" src="donut.png">
         </div>
     </div>
+<!--Second Row-->
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="milk.png" class="img-fluid" alt="">
+            </div>
+            <div id="secondGroup" class="col-md-6 text-center order-1 order-md-2"> 
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 ">
+                        <h2>HISTORY OF CANDY</h2>
+                        <img src="lolli.png" alt="" class="d-none d-lg-inline">  
+                        <p class="lead">The origin of candy can be traced to the ancient Egyptians who combining fruits and nuts with honey. Around the same time, Greeks used honey to make candied fruits and flowers. First modern candies were made in 16th century and sweet manufacturing developed rapidly into an industry during the early 19th century.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<!--Third Row-->
+
+<!--Fouth Row-->
+
+<!--Fifth Row-->
 
 
 
